--- a/roles/fpm/templates/pool.conf.j2
+++ b/roles/fpm/templates/pool.conf.j2
@@ -1,7 +1,7 @@
 ; Start a new pool named 'www'.
 ; the variable $pool can we used in any directive and will be replaced by the
 ; pool name ('www' here)
-[www]
+[{{ pool.name }}]
 
 ; Per pool prefix
 ; It only applies on the following directives:
@@ -15,15 +15,17 @@
 ; When not set, the global prefix (or @php_fpm_prefix@) applies instead.
 ; Note: This directive can also be relative to the global prefix.
 ; Default Value: none
-;prefix = /path/to/pools/$pool
+{% if prefix is defined and prefix %}
+prefix = {{ pool.prefix }}
+{% endif %}
 
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
 ; RPM: apache Choosed to be able to access some dir as httpd
-user = apache
+user = {{ pool.user }}
 ; RPM: Keep a group allowed to write in log dir.
-group = apache
+group = {{ pool.group }}
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
@@ -35,7 +37,11 @@ group = apache
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = 127.0.0.1:9000
+{% if prefix is defined and prefix %}
+listen = $prefix/run/$pool.sock
+{% else %}
+listen = {{ vardir }}/run/$pool.sock
+{% endif %}
 
 ; Set listen(2) backlog.
 ; Default Value: 511
@@ -45,9 +51,15 @@ listen = 127.0.0.1:9000
 ; permissions must be set in order to allow connections from a web server.
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0660
-;listen.owner = nobody
-;listen.group = nobody
-;listen.mode = 0660
+{% if listen.owner is defined %}
+listen.owner = {{ pool.listen.owner }}
+{% endif %}
+{% if listen.group is defined %}
+listen.group = listen.group
+{% endif %}
+{% if listen.mode is defined %}
+listen.mode = listen.mode
+{% endif %}
 
 ; When POSIX Access Control Lists are supported you can set them using
 ; these options, value is a comma separated list of user/group names.
@@ -61,7 +73,7 @@ listen = 127.0.0.1:9000
 ; must be separated by a comma. If this value is left blank, connections will be
 ; accepted from any ip address.
 ; Default Value: any
-listen.allowed_clients = 127.0.0.1
+listen.allowed_clients = {{ pool.listen.allowed_clients|default('127.0.0.1') }}
 
 ; Specify the nice(2) priority to apply to the pool processes (only if set)
 ; The value can vary from -19 (highest priority) to 20 (lower priority)
@@ -106,22 +118,22 @@ pm = dynamic
 ; forget to tweak pm.* to fit your needs.
 ; Note: Used when pm is set to 'static', 'dynamic' or 'ondemand'
 ; Note: This value is mandatory.
-pm.max_children = 50
+pm.max_children = {{ pool.pm.max_children|default(50) }}
 
 ; The number of child processes created on startup.
 ; Note: Used only when pm is set to 'dynamic'
 ; Default Value: min_spare_servers + (max_spare_servers - min_spare_servers) / 2
-pm.start_servers = 5
+pm.start_servers = {{ pool.pm.start_servers|default(5) }}
 
 ; The desired minimum number of idle server processes.
 ; Note: Used only when pm is set to 'dynamic'
 ; Note: Mandatory when pm is set to 'dynamic'
-pm.min_spare_servers = 5
+pm.min_spare_servers = {{ pool.pm.min_spare_servers|default(5) }}
 
 ; The desired maximum number of idle server processes.
 ; Note: Used only when pm is set to 'dynamic'
 ; Note: Mandatory when pm is set to 'dynamic'
-pm.max_spare_servers = 35
+pm.max_spare_servers = {{ pool.pm.max_spare_servers|default(35) }}
  
 ; The number of seconds after which an idle process will be killed.
 ; Note: Used only when pm is set to 'ondemand'
@@ -248,12 +260,17 @@ pm.max_spare_servers = 35
 ; This directive may be used to customize the response of a ping request. The
 ; response is formatted as text/plain with a 200 response code.
 ; Default Value: pong
-;ping.response = pong
+ping.response = {{ pool.ping.response|default('pong') }}
  
 ; The access log file
 ; Default: not set
-;access.log = log/$pool.access.log
+{% if prefix is defined and prefix %}
+;access.log = $prefix/log/php-fpm/access.log
+{% else %}
+;access.log = {{ vardir }}/log/php-fpm/$pool/access.log
+{% endif %}
 
+{% raw %}
 ; The access log format.
 ; The following syntax is allowed
 ;  %%: the '%' character
@@ -312,17 +329,22 @@ pm.max_spare_servers = 35
 ;
 ; Default: "%R - %u %t \"%m %r\" %s"
 ;access.format = "%R - %u %t \"%m %r%Q%q\" %s %f %{mili}d %{kilo}M %C%%"
+{% endraw %}
 
 ; The log file for slow requests
 ; Default Value: not set
 ; Note: slowlog is mandatory if request_slowlog_timeout is set
-slowlog = /var/opt/rh/rh-php70/log/php-fpm/www-slow.log
+{% if prefix is defined and prefix %}
+slowlog = prefix/log/php-fpm/$pool/slow.log
+{% else %}
+slowlog = {{ vardir }}/log/php-fpm/$pool/slow.log
+{% endif %}
 
 ; The timeout for serving a single request after which a PHP backtrace will be
 ; dumped to the 'slowlog' file. A value of '0s' means 'off'.
 ; Available units: s(econds)(default), m(inutes), h(ours), or d(ays)
 ; Default Value: 0
-;request_slowlog_timeout = 0
+request_slowlog_timeout = {{ pool.request_slowlog_timeout|default(0) }}
 
 ; The timeout for serving a single request after which the worker process will
 ; be killed. This option should be used when the 'max_execution_time' ini option
@@ -361,7 +383,7 @@ slowlog = /var/opt/rh/rh-php70/log/php-fpm/www-slow.log
 ; Note: on highloaded environement, this can cause some delay in the page
 ; process time (several ms).
 ; Default Value: no
-;catch_workers_output = yes
+catch_workers_output = {{ pool.catch_workers_output|default('no') }}
  
 ; Clear environment in FPM workers
 ; Prevents arbitrary environment variables from reaching FPM worker processes
@@ -410,13 +432,23 @@ slowlog = /var/opt/rh/rh-php70/log/php-fpm/www-slow.log
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 ;php_flag[display_errors] = off
-php_admin_value[error_log] = /var/opt/rh/rh-php70/log/php-fpm/www-error.log
+{% if prefix is defined and prefix %}
+php_admin_value[error_log] = $prefix/log/php-fpm/error.log
+{% else %}
+php_admin_value[error_log] = {{ pool.php_admin_value.error_log|default(vardir + '/log/php-fpm/$pool/error.log') }}
+{% endif %}
 php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 128M
 
 ; Set data paths to directories owned by process user
 php_value[session.save_handler] = files
-php_value[session.save_path]    = /var/opt/rh/rh-php70/lib/php/session
-php_value[soap.wsdl_cache_dir]  = /var/opt/rh/rh-php70/lib/php/wsdlcache
+{% if prefix is defined and prefix %}
+php_value[session.save_path]    = {{ prefix + '/lib/php/session' }}
+php_value[soap.wsdl_cache_dir]  = {{ prefix + '/lib/php/wsdlcache' }}
+;php_value[opcache.file_cache]  = {{ prefix + '/lib/php/opcache' }}
+{% else %}
+php_value[session.save_path]    = {{ pool.php_value.session.save_path|default(vardir + '/lib/php/session') }}
+php_value[soap.wsdl_cache_dir]  = {{ pool.php_value.soap.wsdl_cache_dir|default(vardir + '/lib/php/wsdlcache') }}
+;php_value[opcache.file_cache]  = {{ pool.php_value.opcache.file_cache|default(vardir + '/lib/php/opcache') }}
+{% endif %}
 
-;php_value[opcache.file_cache]  = /var/opt/rh/rh-php70/lib/php/opcache
